--- a/.env
+++ b/.env
@@ -1,3 +1,3 @@
 PORT = 3000
 SECRET_KEY = secRET\$@%*^*__kEy
-ConnectionString = postgres://postgres:2002@localhost:5432/dev_books
+ConnectionString = "mongodb://127.0.0.1:27017/clinic_services"
