--- a/package.json
+++ b/package.json
@@ -7,17 +7,19 @@
     "express-fileupload": "^1.4.0",
     "jsonwebtoken": "^9.0.1",
     "mongoose": "^7.4.1",
+    "node-cron": "^3.0.2",
     "uuid": "^9.0.0"
   },
   "devDependencies": {
-    "@types/dotenv": "^8.2.0",
-    "@types/jsonwebtoken": "^9.0.2",
-    "@types/uuid": "^9.0.2",
     "@types/bcrypt": "^5.0.0",
     "@types/cors": "^2.8.13",
+    "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
     "@types/express-fileupload": "^1.4.1",
+    "@types/jsonwebtoken": "^9.0.2",
     "@types/node": "^20.4.5",
+    "@types/node-cron": "^3.0.8",
+    "@types/uuid": "^9.0.2",
     "nodemon": "^3.0.1"
   },
   "name": "competition",
